--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,23 +1,106 @@
 body {
-  background-color: #333;
+  background-color: #ccc;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  max-width: 850px;
+  margin: auto;
+}
+
+div {
+  background-color: #888;
+  margin: 5px;
+  padding: 5px;
+  padding-bottom: 50%;
+}
+
+h1,
+p {
+  margin: 10px;
+  text-align: center;
+  color: #ddd;
 }
 
 nav {
-  background-color: #ddd;
-  border-style: double;
-  margin: 2rem;
+  background-image: linear-gradient(to top, #999 0%, #ddd 90%, #063301 100%);
+  margin: 5px;
   display: flex;
   color: #02612d;
+  flex-wrap: wrap;
 }
 
-ul {
+nav ul {
   display: flex;
+  padding-inline-start: 10px;
 }
 
-li {
+nav li {
   padding: 10px;
-  margin-inline: 1rem;
+  margin-inline: 5px;
   display: flex;
   border-style: dotted;
-  min-width: 75px;
+}
+
+nav a {
+  text-align: center;
+  text-decoration: none;
+  color: #02612d;
+  min-width: 65px;
+}
+
+nav a:hover {
+  color: #333;
+  font-weight: bold;
+}
+
+.plane {
+  padding: 3px;
+  transform: rotate(-45deg) scale(0.5); /* animation */
+  transition: all 1.5s ease; /* transition for animation */
+}
+
+.plane:hover {
+  transform: rotate(0deg) scale(0.5);
+}
+
+footer {
+  background-color: #02612d;
+  text-align: center;
+  color: #ddd;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  border-radius: 5px 5px 5px 5px;
+  margin: 6px;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+  font-style: italic;
+}
+
+footer a:hover {
+  font-style: normal;
+}
+
+@media (min-width: 540px) {
+  nav,
+  h1,
+  p,
+  footer {
+    margin: 2rem;
+  }
+  div {
+    margin: 10px;
+  }
+  nav ul {
+    padding-inline-start: 40px;
+  }
+  nav a {
+    min-width: 75px;
+  }
+  .plane {
+    transform: rotate(-45deg) scale(1);
+  }
+  .plane:hover {
+    transform: rotate(0deg) scale(1.1);
+  }
 }
