--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -5,11 +5,11 @@ body {
   margin: auto;
 }
 
-div {
+.maindiv {
   background-color: #888;
   margin: 5px;
   padding: 5px;
-  padding-bottom: 50%;
+  border-radius: 3%;
 }
 
 h1,
@@ -25,11 +25,12 @@ nav {
   display: flex;
   color: #02612d;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 nav ul {
   display: flex;
-  padding-inline-start: 10px;
+  padding-inline-start: 2px;
 }
 
 nav li {
@@ -61,6 +62,18 @@ nav a:hover {
   transform: rotate(0deg) scale(0.5);
 }
 
+main {
+  text-align: center;
+  margin: 7px;
+}
+
+.mainpic {
+  display: block;
+  float: right;
+  margin-top: 5px;
+  margin-inline-start: 10px;
+}
+
 footer {
   background-color: #02612d;
   text-align: center;
@@ -81,6 +94,27 @@ footer a:hover {
   font-style: normal;
 }
 
+.modal {
+  visibility: hidden;
+}
+
+.modal a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.modal a:hover {
+  font-weight: bold;
+}
+
+.showmodal {
+  visibility: visible;
+  background-color: #02612d;
+  padding-right: 10px;
+  position: absolute;
+  min-width: 120px;
+}
+
 @media (min-width: 540px) {
   nav,
   h1,
@@ -88,8 +122,9 @@ footer a:hover {
   footer {
     margin: 2rem;
   }
-  div {
-    margin: 10px;
+  .maindiv {
+    margin-top: 40px;
+    padding-bottom: 40px;
   }
   nav ul {
     padding-inline-start: 40px;
@@ -102,5 +137,11 @@ footer a:hover {
   }
   .plane:hover {
     transform: rotate(0deg) scale(1.1);
+  }
+  .mainpic {
+    margin-right: 25px;
+  }
+  footer {
+    line-height: 0.1px;
   }
 }
