--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -64,14 +64,28 @@ nav a:hover {
 
 main {
   text-align: center;
-  margin: 7px;
+  margin: 10px;
 }
 
-.mainpic {
+main p {
+  text-align: left;
+  min-height: 200px;
+  font-size: 18px;
+}
+
+aside {
   display: block;
   float: right;
   margin-top: 5px;
   margin-inline-start: 10px;
+  height: 230px;
+}
+
+aside p {
+  color: #000;
+  font-size: 12px;
+  margin-top: -5px;
+  margin-left: 13px;
 }
 
 footer {
@@ -81,7 +95,6 @@ footer {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   border-radius: 5px 5px 5px 5px;
-  margin: 6px;
 }
 
 footer a {
@@ -124,7 +137,7 @@ footer a:hover {
   }
   .maindiv {
     margin-top: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
   }
   nav ul {
     padding-inline-start: 40px;
@@ -143,5 +156,6 @@ footer a:hover {
   }
   footer {
     line-height: 0.1px;
+    margin-top: 60px;
   }
 }
