--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -44,12 +44,13 @@ nav a {
   text-align: center;
   text-decoration: none;
   color: #02612d;
+  font-weight: bold;
   min-width: 65px;
 }
 
 nav a:hover {
   color: #333;
-  font-weight: bold;
+  text-decoration: underline;
 }
 
 .plane {
@@ -95,6 +96,7 @@ footer {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   border-radius: 5px 5px 5px 5px;
+  margin: 10px;
 }
 
 footer a {
@@ -156,6 +158,6 @@ footer a:hover {
   }
   footer {
     line-height: 0.1px;
-    margin-top: 60px;
+    margin-top: 30px;
   }
 }
