--- a/src/css/styles2.css
+++ b/src/css/styles2.css
@@ -1,38 +1,12 @@
-body {
-  background-color: #ccc;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  max-width: 850px;
-  margin: auto;
-}
-
-.maindiv {
-  background-color: #888;
-  margin: 5px;
-  padding: 5px;
-  border-radius: 3%;
-}
-
-nav {
-  background-image: linear-gradient(to top, #999 0%, #ddd 90%, #063301 100%);
-  margin: 5px;
-  display: flex;
-  color: #02612d;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-nav a {
-  text-align: center;
-  color: #000;
-  font-weight: bold;
-  min-width: 65px;
-}
-
-main p {
+.pLayout {
   margin: 15px;
   text-align: left;
   font-size: 18px;
   color: #ddd;
+}
+
+h1 {
+  min-height: 45px;
 }
 
 h3 {
@@ -41,7 +15,7 @@ h3 {
   color: #02612d;
 }
 
-ul li {
+.recdiv {
   text-align: left;
   margin: auto;
 }
@@ -65,12 +39,16 @@ ul li {
   nav,
   h1 {
     margin: 2rem;
+    text-align: left;
+  }
+  h1 {
+    padding-left: 2rem;
   }
   main {
     display: grid;
     grid-template-columns: 60% 40%;
     text-align: center;
-    margin: -10px 32px 32px 32px;
+    margin: -10px 32px 20px 32px;
   }
   main p {
     min-height: 250px;
@@ -84,6 +62,7 @@ ul li {
   }
   aside {
     background-color: #bbb;
+    margin-top: -20px;
     padding-top: 20px;
   }
 }
