adding image widths

--- a/src/_includes/layout.html
+++ b/src/_includes/layout.html
@@ -33,7 +33,7 @@
       <main>
         <article>
           <picture>
-            <img class="image1" src="{{ images[1] }}" alt="{{ alts[0] }}" height="250" />
+            <img class="image1" src="{{ images[1] }}" alt="{{ alts[0] }}" height="247" width="330"/>
           </picture>
           <p class="pLayout">
             {{ excerpt }}
@@ -41,7 +41,7 @@
         </article>
         <aside>
           <picture>
-            <img class="image2" src="{{ images[0] }}" alt="{{ alts[1] }}" height="330" />
+            <img class="image2" src="{{ images[0] }}" alt="{{ alts[1] }}" height="330" width="247" />
           </picture>
           <div class="reclist">
             <h3>Recommended Attractions</h3>
